alpha_antlr_v0.2/alphaParser.py
# Generated from alpha.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class alphaParser ( Parser ):

    grammarFileName = "alpha.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'.'", "'Assign '", "' to '", "' as '", 
                     "'an integer'", "'a float'", "'a string'", "'Print '", 
                     "'Define '", "' on '", "' as:'", "','", "'Call '", 
                     "'Return '", "' and '", "'the value of '", "'the result of calling '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "STRING", "NUMBER", "PLUS", 
                      "MINUS", "TIMES", "DIVIDE", "WS" ]

    RULE_prog = 0
    RULE_returnFunc = 1
    RULE_assign = 2
    RULE_show = 3
    RULE_func = 4
    RULE_call = 5
    RULE_returnVal = 6
    RULE_value = 7
    RULE_args = 8
    RULE_reference = 9
    RULE_returnCall = 10

    ruleNames =  [ "prog", "returnFunc", "assign", "show", "func", "call", 
                   "returnVal", "value", "args", "reference", "returnCall" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    STRING=18
    NUMBER=19
    PLUS=20
    MINUS=21
    TIMES=22
    DIVIDE=23
    WS=24

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.AssignContext)
            else:
                return self.getTypedRuleContext(alphaParser.AssignContext,i)


        def show(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ShowContext)
            else:
                return self.getTypedRuleContext(alphaParser.ShowContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.FuncContext)
            else:
                return self.getTypedRuleContext(alphaParser.FuncContext,i)


        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.CallContext)
            else:
                return self.getTypedRuleContext(alphaParser.CallContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.WS)
            else:
                return self.getToken(alphaParser.WS, i)

        def getRuleIndex(self):
            return alphaParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)




    def prog(self):

        localctx = alphaParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 26
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [alphaParser.T__1]:
                    self.state = 22
                    self.assign()
                    pass
                elif token in [alphaParser.T__7]:
                    self.state = 23
                    self.show()
                    pass
                elif token in [alphaParser.T__8]:
                    self.state = 24
                    self.func()
                    pass
                elif token in [alphaParser.T__12]:
                    self.state = 25
                    self.call()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 28
                self.match(alphaParser.T__0)
                self.state = 30
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==alphaParser.WS:
                    self.state = 29
                    self.match(alphaParser.WS)


                self.state = 34 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << alphaParser.T__1) | (1 << alphaParser.T__7) | (1 << alphaParser.T__8) | (1 << alphaParser.T__12))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnFuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.AssignContext)
            else:
                return self.getTypedRuleContext(alphaParser.AssignContext,i)


        def show(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ShowContext)
            else:
                return self.getTypedRuleContext(alphaParser.ShowContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.FuncContext)
            else:
                return self.getTypedRuleContext(alphaParser.FuncContext,i)


        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.CallContext)
            else:
                return self.getTypedRuleContext(alphaParser.CallContext,i)


        def returnVal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ReturnValContext)
            else:
                return self.getTypedRuleContext(alphaParser.ReturnValContext,i)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.WS)
            else:
                return self.getToken(alphaParser.WS, i)

        def getRuleIndex(self):
            return alphaParser.RULE_returnFunc

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnFunc" ):
                listener.enterReturnFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnFunc" ):
                listener.exitReturnFunc(self)




    def returnFunc(self):

        localctx = alphaParser.ReturnFuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_returnFunc)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 41
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [alphaParser.T__1]:
                    self.state = 36
                    self.assign()
                    pass
                elif token in [alphaParser.T__7]:
                    self.state = 37
                    self.show()
                    pass
                elif token in [alphaParser.T__8]:
                    self.state = 38
                    self.func()
                    pass
                elif token in [alphaParser.T__12]:
                    self.state = 39
                    self.call()
                    pass
                elif token in [alphaParser.T__13]:
                    self.state = 40
                    self.returnVal()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 43
                self.match(alphaParser.T__0)
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==alphaParser.WS:
                    self.state = 44
                    self.match(alphaParser.WS)


                self.state = 49 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << alphaParser.T__1) | (1 << alphaParser.T__7) | (1 << alphaParser.T__8) | (1 << alphaParser.T__12) | (1 << alphaParser.T__13))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ValueContext)
            else:
                return self.getTypedRuleContext(alphaParser.ValueContext,i)


        def getRuleIndex(self):
            return alphaParser.RULE_assign

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign" ):
                listener.enterAssign(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign" ):
                listener.exitAssign(self)




    def assign(self):

        localctx = alphaParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 51
            self.match(alphaParser.T__1)
            self.state = 52
            self.value()
            self.state = 53
            self.match(alphaParser.T__2)
            self.state = 54
            self.value()
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alphaParser.T__3:
                self.state = 55
                self.match(alphaParser.T__3)
                self.state = 56
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << alphaParser.T__4) | (1 << alphaParser.T__5) | (1 << alphaParser.T__6))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShowContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(alphaParser.ValueContext,0)


        def getRuleIndex(self):
            return alphaParser.RULE_show

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShow" ):
                listener.enterShow(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShow" ):
                listener.exitShow(self)




    def show(self):

        localctx = alphaParser.ShowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_show)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(alphaParser.T__7)
            self.state = 60
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(alphaParser.ValueContext,0)


        def args(self):
            return self.getTypedRuleContext(alphaParser.ArgsContext,0)


        def WS(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.WS)
            else:
                return self.getToken(alphaParser.WS, i)

        def assign(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.AssignContext)
            else:
                return self.getTypedRuleContext(alphaParser.AssignContext,i)


        def show(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ShowContext)
            else:
                return self.getTypedRuleContext(alphaParser.ShowContext,i)


        def func(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.FuncContext)
            else:
                return self.getTypedRuleContext(alphaParser.FuncContext,i)


        def call(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.CallContext)
            else:
                return self.getTypedRuleContext(alphaParser.CallContext,i)


        def returnVal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ReturnValContext)
            else:
                return self.getTypedRuleContext(alphaParser.ReturnValContext,i)


        def getRuleIndex(self):
            return alphaParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)




    def func(self):

        localctx = alphaParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(alphaParser.T__8)
            self.state = 63
            self.value()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alphaParser.T__9:
                self.state = 64
                self.match(alphaParser.T__9)
                self.state = 65
                self.args()


            self.state = 68
            self.match(alphaParser.T__10)
            self.state = 70
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alphaParser.WS:
                self.state = 69
                self.match(alphaParser.WS)


            self.state = 85 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 77
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [alphaParser.T__1]:
                        self.state = 72
                        self.assign()
                        pass
                    elif token in [alphaParser.T__7]:
                        self.state = 73
                        self.show()
                        pass
                    elif token in [alphaParser.T__8]:
                        self.state = 74
                        self.func()
                        pass
                    elif token in [alphaParser.T__12]:
                        self.state = 75
                        self.call()
                        pass
                    elif token in [alphaParser.T__13]:
                        self.state = 76
                        self.returnVal()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 83
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
                    if la_ == 1:
                        self.state = 79
                        self.match(alphaParser.T__11)
                        self.state = 81
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if _la==alphaParser.WS:
                            self.state = 80
                            self.match(alphaParser.WS)





                else:
                    raise NoViableAltException(self)
                self.state = 87 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,12,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(alphaParser.ValueContext,0)


        def args(self):
            return self.getTypedRuleContext(alphaParser.ArgsContext,0)


        def getRuleIndex(self):
            return alphaParser.RULE_call

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCall" ):
                listener.enterCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCall" ):
                listener.exitCall(self)




    def call(self):

        localctx = alphaParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(alphaParser.T__12)
            self.state = 90
            self.value()
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alphaParser.T__9:
                self.state = 91
                self.match(alphaParser.T__9)
                self.state = 92
                self.args()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnValContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(alphaParser.ValueContext,0)


        def getRuleIndex(self):
            return alphaParser.RULE_returnVal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnVal" ):
                listener.enterReturnVal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnVal" ):
                listener.exitReturnVal(self)




    def returnVal(self):

        localctx = alphaParser.ReturnValContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_returnVal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 95
            self.match(alphaParser.T__13)
            self.state = 96
            self.value()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ValueContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.STRING)
            else:
                return self.getToken(alphaParser.STRING, i)

        def reference(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ReferenceContext)
            else:
                return self.getTypedRuleContext(alphaParser.ReferenceContext,i)


        def returnCall(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ReturnCallContext)
            else:
                return self.getTypedRuleContext(alphaParser.ReturnCallContext,i)


        def NUMBER(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.NUMBER)
            else:
                return self.getToken(alphaParser.NUMBER, i)

        def PLUS(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.PLUS)
            else:
                return self.getToken(alphaParser.PLUS, i)

        def MINUS(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.MINUS)
            else:
                return self.getToken(alphaParser.MINUS, i)

        def TIMES(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.TIMES)
            else:
                return self.getToken(alphaParser.TIMES, i)

        def DIVIDE(self, i:int=None):
            if i is None:
                return self.getTokens(alphaParser.DIVIDE)
            else:
                return self.getToken(alphaParser.DIVIDE, i)

        def getRuleIndex(self):
            return alphaParser.RULE_value

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterValue" ):
                listener.enterValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitValue" ):
                listener.exitValue(self)




    def value(self):

        localctx = alphaParser.ValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_value)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 114
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,18,self._ctx)
                    if la_ == 1:
                        self.state = 101
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [alphaParser.STRING]:
                            self.state = 98
                            self.match(alphaParser.STRING)
                            pass
                        elif token in [alphaParser.T__15]:
                            self.state = 99
                            self.reference()
                            pass
                        elif token in [alphaParser.T__16]:
                            self.state = 100
                            self.returnCall()
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 104
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,15,self._ctx)
                        if la_ == 1:
                            self.state = 103
                            self.match(alphaParser.PLUS)


                        pass

                    elif la_ == 2:
                        self.state = 109
                        self._errHandler.sync(self)
                        token = self._input.LA(1)
                        if token in [alphaParser.NUMBER]:
                            self.state = 106
                            self.match(alphaParser.NUMBER)
                            pass
                        elif token in [alphaParser.T__15]:
                            self.state = 107
                            self.reference()
                            pass
                        elif token in [alphaParser.T__16]:
                            self.state = 108
                            self.returnCall()
                            pass
                        else:
                            raise NoViableAltException(self)

                        self.state = 112
                        self._errHandler.sync(self)
                        la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
                        if la_ == 1:
                            self.state = 111
                            _la = self._input.LA(1)
                            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << alphaParser.PLUS) | (1 << alphaParser.MINUS) | (1 << alphaParser.TIMES) | (1 << alphaParser.DIVIDE))) != 0)):
                                self._errHandler.recoverInline(self)
                            else:
                                self._errHandler.reportMatch(self)
                                self.consume()


                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 116 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,19,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alphaParser.ValueContext)
            else:
                return self.getTypedRuleContext(alphaParser.ValueContext,i)


        def getRuleIndex(self):
            return alphaParser.RULE_args

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArgs" ):
                listener.enterArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArgs" ):
                listener.exitArgs(self)




    def args(self):

        localctx = alphaParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_args)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.value()
            self.state = 123
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 119
                    self.match(alphaParser.T__14)
                    self.state = 120
                    self.value() 
                self.state = 125
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReferenceContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(alphaParser.ValueContext,0)


        def WS(self):
            return self.getToken(alphaParser.WS, 0)

        def getRuleIndex(self):
            return alphaParser.RULE_reference

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReference" ):
                listener.enterReference(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReference" ):
                listener.exitReference(self)




    def reference(self):

        localctx = alphaParser.ReferenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_reference)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(alphaParser.T__15)
            self.state = 127
            self.value()
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,22,self._ctx)
            if la_ == 1:
                self.state = 128
                self.match(alphaParser.T__11)
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==alphaParser.WS:
                    self.state = 129
                    self.match(alphaParser.WS)




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnCallContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def value(self):
            return self.getTypedRuleContext(alphaParser.ValueContext,0)


        def args(self):
            return self.getTypedRuleContext(alphaParser.ArgsContext,0)


        def WS(self):
            return self.getToken(alphaParser.WS, 0)

        def getRuleIndex(self):
            return alphaParser.RULE_returnCall

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnCall" ):
                listener.enterReturnCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnCall" ):
                listener.exitReturnCall(self)




    def returnCall(self):

        localctx = alphaParser.ReturnCallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_returnCall)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(alphaParser.T__16)
            self.state = 135
            self.value()
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,23,self._ctx)
            if la_ == 1:
                self.state = 136
                self.match(alphaParser.T__9)
                self.state = 137
                self.args()


            self.state = 144
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,25,self._ctx)
            if la_ == 1:
                self.state = 140
                self.match(alphaParser.T__11)
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==alphaParser.WS:
                    self.state = 141
                    self.match(alphaParser.WS)




        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





